test_suite5/ALAN/test_suite/alan-2022-examples/failing/002380_mutation.alan
source J begin get an while 881] end
